# tokenscope

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-token-contador.md
docs/superpowers/specs/: 2026-04-09-token-contador-design.md
examples/: basic_usage.py  demo.html
tests/: conftest.py  test_cli.py  test_web.py
tests/unit/: test_core_api.py  test_models.py  test_pricing.py  test_registry.py  test_scraper.py  test_tokenizer.py
token_contador/: __init__.py
token_contador/cli/: main.py
token_contador/core/: __init__.py  models.py  pricing.py  registry.py  scraper.py  tokenizer.py
token_contador/data/: models.yaml
token_contador/web/: app.py  routes.py
token_contador/web/templates/: base.html  index.html
token_contador/web/templates/partials/: results_table.html
